added favorites database

--- a/app/src/main/res/layout/custom_productlist.xml
+++ b/app/src/main/res/layout/custom_productlist.xml
@@ -19,13 +19,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivImage"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="215dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/pastacarbonara"
-                android:onClick="showFoodDetail"/>
+                android:layout_height="215dp">
+
+                <ImageView
+                    android:id="@+id/ivImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/pastacarbonara"
+                    android:onClick="showFoodDetail"/>
+
+
+                <ImageButton
+                    android:id="@+id/favBtn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="top|end"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/whitecircle"
+                    android:src="@drawable/fav_btn_selector"
+                    android:onClick="toggleFavorite"/>
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,10 +56,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Name"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:paddingTop="8dp"
-                    />
+                    android:paddingTop="8dp"/>
 
                 <!-- For + - button to increase/decrease quantity of item -->
                 <LinearLayout
@@ -54,6 +72,7 @@
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
                         android:text="Price"
+                        android:textColor="@color/black"
                         android:textSize="18sp"
                         android:paddingTop="4dp"
                         android:paddingBottom="10dp"/>
