--- a/app/src/main/res/layout/dialog_food_detail.xml
+++ b/app/src/main/res/layout/dialog_food_detail.xml
@@ -57,9 +57,11 @@
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/white_bg_details"
+                    android:background="@drawable/custom_footer"
+                    android:backgroundTint="@color/background"
                     android:orientation="vertical"
                     android:padding="16dp"
+                    android:layout_marginTop="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -78,18 +80,6 @@
                             android:textColor="@color/black"
                             android:textSize="18sp"
                             android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/favBtn"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:layout_marginEnd="5dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0"
-                            app:srcCompat="@drawable/favbtn" />
-
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
