--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/cartlayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,13 +44,30 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <!-- TextView for "Cart is empty" message -->
+    <TextView
+        android:id="@+id/emptyCartMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cart is empty"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/cartlayout"
+        app:layout_constraintBottom_toTopOf="@id/footer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        android:padding="16dp"/>
+
+
     <!-- Nested scroll view and recyclerview to display the items that were added to cart -->
     <androidx.core.widget.NestedScrollView
         android:id="@+id/cartpagesv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/cartlayout"
-        app:layout_constraintBottom_toTopOf="@id/footer"
+        app:layout_constraintBottom_toTopOf="@id/price_details"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -64,9 +81,106 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scrollbars="vertical"/>
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/price_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/cartpagesv"
+        app:layout_constraintBottom_toTopOf="@id/footer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price details"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:paddingBottom="8dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:paddingBottom="4dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Price w/o GST"
+                android:layout_weight="0.7"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/noGSTprice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$100"
+                android:layout_weight="0.3"
+                android:textColor="@color/black"
+                android:gravity="end"/>
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:paddingBottom="4dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="GST"
+                android:layout_weight="0.7"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/GST"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$7"
+                android:layout_weight="0.3"
+                android:textColor="@color/black"
+                android:gravity="end"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:paddingBottom="4dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Total Price"
+                android:layout_weight="0.7"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/totalpricing"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$107"
+                android:layout_weight="0.3"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:gravity="end"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/footer"
@@ -116,7 +230,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="0dp"
                 android:gravity="center"
-                android:background="@drawable/orange_bg_details"
+                android:background="@drawable/checkoutbtn"
                 android:elevation="1dp"
                 android:padding="10dp">
 
