--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -35,10 +35,11 @@
             <ImageView
                 android:id="@+id/profileImg"
                 android:layout_width="100dp"
-                android:layout_height="96dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/profile_pic" />
+                android:src="@drawable/profile_pic"
+                android:scaleType="centerCrop"  />
 
             <TextView
                 android:id="@+id/titleName"
