--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -7,7 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".registerPage">
 
-    <!-- Scaled Background Image -->
+
+
+    <!-- Background -->
     <ImageView
         android:id="@+id/background"
         android:layout_width="match_parent"
@@ -19,7 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Auto-scale TextView -->
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/mainLogo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/mainlogo" />
+
+    <!-- Sign Up Title  -->
     <TextView
         android:id="@+id/tv_Registertitle"
         android:layout_width="match_parent"
@@ -39,63 +51,85 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/regname"
+
+    <!-- Name Input  -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout1"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/jason_custom_edit_text"
-        android:drawableStart="@drawable/person_logo"
-        android:drawablePadding="5dp"
-        android:ems="16"
+        android:layout_height="wrap_content"
         android:hint="Name:"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Registertitle" />
+        app:layout_constraintTop_toBottomOf="@id/tv_Registertitle"
+        app:startIconDrawable="@drawable/person_logo">
 
-    <EditText
-        android:id="@+id/regemail"
+        <EditText
+            android:id="@+id/regname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/jason_custom_edit_text"
+            android:drawablePadding="5dp"
+            android:ems="16"
+            android:inputType="text"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_Logintitle" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Email Input  -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/jason_custom_edit_text"
-        android:drawableStart="@drawable/email_logo"
-        android:drawablePadding="5dp"
-        android:ems="16"
+        android:layout_height="wrap_content"
         android:hint="Email:"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regname" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
+        app:startIconDrawable="@drawable/email_logo">
 
-    <EditText
-        android:id="@+id/regpassword"
+        <EditText
+            android:id="@+id/regemail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/jason_custom_edit_text"
+            android:drawablePadding="5dp"
+            android:ems="16"
+            android:inputType="text"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Password Input  -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout3"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/jason_custom_edit_text"
-        android:drawableStart="@drawable/lock_logo"
-        android:drawablePadding="5dp"
-        android:ems="16"
+        android:layout_height="wrap_content"
         android:hint="Password:"
-        android:inputType="text"
-        android:paddingStart="10dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regemail" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
+        app:passwordToggleEnabled="true"
+        app:startIconDrawable="@drawable/lock_logo">
 
+        <EditText
+            android:id="@+id/regpassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/jason_custom_edit_text"
+            android:drawablePadding="5dp"
+            android:ems="16"
+            android:inputType="textPassword"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Register Button  -->
     <android.widget.Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
@@ -107,7 +141,7 @@
         android:textColor="@color/white"
         android:text="Register"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/regpassword" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -120,6 +154,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_register">
 
+        <!-- Navigate to Login Page  -->
         <TextView
             android:id="@+id/tv_AlreadyAccText"
             android:layout_width="wrap_content"
@@ -146,8 +181,6 @@
             android:textColor="#03A9F4"
             android:textSize="16sp"
             android:textStyle="bold" />
-
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
