--- a/app/src/main/res/layout/popup1.xml
+++ b/app/src/main/res/layout/popup1.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Please Verify before logging in!"
+            android:text="Message"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp" />
