R: made the voice recognition works , by making it navigate to other pages ..

--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -113,7 +113,7 @@
                 <RelativeLayout
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="60dp"
+                    android:layout_marginEnd="70dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -130,16 +130,21 @@
                         android:padding="8dp"
                         android:textSize="15dp" />
 
-                    <ImageButton
-                        android:id="@+id/search_voice_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="20dp"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/voice_recognition_icon" />
+
                 </RelativeLayout>
+
+                <ImageButton
+                    android:id="@+id/search_voice_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="60dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/voice_recognition_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <ImageButton
                     android:id="@+id/filterIcon"
@@ -319,6 +324,12 @@
             app:backgroundTint="@color/orange"
             app:fabSize="normal" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
