--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -253,6 +253,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/allproductslayout" />
+
+            <TextView
+                android:id="@+id/noProductTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="There is no product available in that price and category"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/productrecyclerView"
+                app:layout_constraintBottom_toBottomOf="@id/productrecyclerView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- RecyclerView for displaying popular products -->
@@ -279,6 +293,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <!-- RecyclerView for displaying order again products -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clorderagainproduct"
@@ -326,16 +341,7 @@
             app:fabSize="normal" />
     </FrameLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:visibility="gone"
-        app:dividerInsetStart="50dp"
-        app:headerLayout="@layout/drawer_header"
-        app:itemIconPadding="30dp"
-        app:menu="@menu/drawer_items" />
+
 
     <FrameLayout
         android:id="@+id/fragment_container"
@@ -379,5 +385,18 @@
             android:textColor="@android:color/white"
             android:layout_marginTop="10dp" />
     </LinearLayout>
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:dividerInsetStart="50dp"
+        app:headerLayout="@layout/drawer_header"
+        app:itemIconPadding="30dp"
+        app:menu="@menu/drawer_items" />
+
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
