--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -8,7 +8,7 @@
 
         <item
             android:id="@+id/navMenu"
-            android:title="Menu"
+            android:title="Products"
             android:icon="@drawable/menu_icon" />
 
         <item
