R: Made the points and voucher works but cannot display in cart yet,, wil update again

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="green">#49583c</color>
     <color name="orange">#d5702b</color>
     <color name="grey">#a9a9a9</color>
+    <color name="platinium">#E5E4E2</color>
 
 
     <color name="bronze">#CD7F32</color> <!-- Bronze color -->
