--- a/app/src/main/res/layout/activity_cartpage.xml
+++ b/app/src/main/res/layout/activity_cartpage.xml
@@ -130,6 +130,9 @@
                 android:gravity="end"/>
         </LinearLayout>
 
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -144,11 +147,36 @@
                 android:layout_weight="0.7"
                 android:textColor="@color/black"/>
 
+
             <TextView
                 android:id="@+id/GST"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="$7"
+                android:layout_weight="0.3"
+                android:textColor="@color/black"
+                android:gravity="end"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            android:paddingBottom="4dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Discount"
+                android:layout_weight="0.7"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/discountPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0"
                 android:layout_weight="0.3"
                 android:textColor="@color/black"
                 android:gravity="end"/>
