--- a/app/src/main/res/layout/activity_points_page.xml
+++ b/app/src/main/res/layout/activity_points_page.xml
@@ -5,244 +5,236 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray"
+    android:background="@color/white"
     tools:context=".pointsFragment">
 
-    <!-- Header Section -->
-    <LinearLayout
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="50dp"
-        android:background="@color/yellow"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-<!--        <ImageView-->
-<!--            android:id="@+id/faqIcon"-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:layout_gravity="center_vertical"-->
-<!--            android:src="@drawable/ic_faq"-->
-<!--            android:contentDescription="FAQ Icon" />-->
-
-        <TextView
-            android:id="@+id/headerText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Welcome to Plus Rewards"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-        <!--        <ImageView-->
-<!--            android:id="@+id/settingsIcon"-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:layout_gravity="center_vertical"-->
-<!--            android:src="@drawable/ic_settings"-->
-<!--            android:contentDescription="Settings Icon" />-->
-    </LinearLayout>
-
-    <!-- Points Section -->
-    <LinearLayout
-        android:id="@+id/pointsSection"
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@drawable/card_background_points"
-        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/bottomLinear"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/header"
-        android:layout_marginTop="110dp">
-
-        <TextView
-            android:id="@+id/pointsLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Points"
-            android:textSize="16sp"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/pointsValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2,000"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/pointsEquivalent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Equals $250"
-            android:textSize="14sp"
-            android:textColor="@color/grey" />
-    </LinearLayout>
-
-    <!-- Earn and Redeem Section -->
-    <LinearLayout
-        android:id="@+id/earnRedeemSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/pointsSection"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:padding="16dp"
-            android:background="@drawable/card_background_points">
-
-            <ImageView
-                android:id="@+id/earnIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/account"
-                android:contentDescription="Earn Icon" />
-
-            <TextView
-                android:id="@+id/earnLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Earn"
-                android:textSize="16sp"
-                android:textColor="@color/black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:padding="16dp"
-            android:background="@drawable/card_background_points">
-
-            <ImageView
-                android:id="@+id/redeemIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/account"
-                android:contentDescription="Redeem Icon" />
-
-            <TextView
-                android:id="@+id/redeemLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Redeem"
-                android:textSize="16sp"
-                android:textColor="@color/black" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Progress Section -->
-    <LinearLayout
-        android:id="@+id/progressSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/earnRedeemSection"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/levelLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gold (Level 3)"
-            android:textSize="16sp"
-            android:textColor="@color/black" />
-
-        <ProgressBar
-            android:id="@+id/levelProgressBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="100"
-            android:progress="55"
-            android:progressTint="@color/green"
-            style="?android:attr/progressBarStyleHorizontal" />
-    </LinearLayout>
-
-    <!-- Refer Friends Section -->
-    <LinearLayout
-        android:id="@+id/referFriendsSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/progressSection"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/referLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Refer Your Friends"
-            android:textSize="16sp"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/referDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You get $20 Coupon\nThey get Free Shipping Coupon"
-            android:textSize="14sp"
-            android:textColor="@color/grey" />
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="8dp">
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/referLink"
-                android:layout_width="0dp"
+            <!-- Header Section -->
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="https://www.greatsite.com/..."
-                android:background="@drawable/custom_rounded_corner_details"
-                android:padding="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:inputType="text" />
+                android:orientation="horizontal"
+                android:padding="50dp"
+                android:background="@color/orange">
 
-            <Button
-                android:id="@+id/copyButton"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/headerText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Welcome to Enchante Rewards"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <!-- Points Section -->
+            <LinearLayout
+                android:id="@+id/pointsSection"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Copy"
-                android:backgroundTint="@color/yellow"
-                android:textColor="@color/black" />
+                android:orientation="horizontal"
+                android:padding="30dp"
+                android:background="@drawable/card_background_points"
+                app:layout_constraintTop_toBottomOf="@id/header"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="-35dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:elevation="20dp">
+
+                <TextView
+                    android:id="@+id/pointsLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Points"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:drawableStart="@drawable/baseline_star_outline_24"
+                    android:textColor="@color/black" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/pointsValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2,000"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/pointsEquivalent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Equals $250"
+                        android:textSize="14sp"
+                        android:textColor="@color/grey"
+                        android:layout_marginStart="8dp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Redeem Points Section -->
+            <LinearLayout
+                android:id="@+id/redeemPointsSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/card_background_points"
+                android:layout_margin="10dp"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/redeem_points_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:text="Redeem Points"
+                    android:layout_gravity="left"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/button_100_points"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:backgroundTint="@color/orange"
+                    android:elevation="4dp"
+                    android:padding="12dp"
+                    android:text="100 points, get $5 off" />
+
+                <Button
+                    android:id="@+id/button_200_points"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:backgroundTint="@color/orange"
+                    android:elevation="4dp"
+                    android:padding="12dp"
+                    android:text="200 points, get $10 off" />
+
+                <Button
+                    android:id="@+id/button_350_points"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/orange"
+                    android:elevation="4dp"
+                    android:padding="12dp"
+                    android:text="350 points, get $20 off" />
+            </LinearLayout>
+
+            <!-- Progress Section -->
+            <LinearLayout
+                android:id="@+id/progressSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="16dp"
+                android:background="@drawable/card_background_points"
+                android:layout_margin="20dp"
+                android:elevation="20dp">
+
+                <ImageView
+                    android:id="@+id/levelIcon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:contentDescription="Level Icon"
+                    android:src="@drawable/baseline_stars_24" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp">
+
+                    <TextView
+                        android:id="@+id/levelLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Gold (Max Tier)"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/pointsToNextLevel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1090 Points to Gold"
+                        android:textColor="@color/grey"
+                        android:textSize="14sp" />
+
+                    <ProgressBar
+                        android:id="@+id/levelProgressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:max="100"
+                        android:progress="55"
+                        android:progressTint="@color/green" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/arrowIcon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="Arrow Icon"
+                    android:src="@drawable/baseline_arrow_forward_ios_24" />
+            </LinearLayout>
+
+            <!-- LinearLayout containing TextView and RecyclerView -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="20dp">
+
+
+                <TextView
+                    android:id="@+id/redeemedVouchersTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Redeemed Vouchers"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="4dp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/voucherRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp" />
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/referFriendsCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You have referred 0 friends"
-            android:textSize="14sp"
-            android:textColor="@color/grey"
-            android:paddingTop="8dp" />
-    </LinearLayout>
+    </ScrollView>
 
     <!-- Navigation bar -->
     <LinearLayout
@@ -319,18 +311,18 @@
             android:orientation="vertical">
 
             <ImageButton
-                android:id="@+id/cart_button"
+                android:id="@+id/cart"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:contentDescription="Cart Image"
-                android:padding="12dp"
+                android:padding="10dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/shoppingcartimg" />
 
             <TextView
-                android:id="@+id/carttext"
+                android:id="@+id/cartText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
