--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -43,6 +43,7 @@
                     android:layout_height="wrap_content"
                     android:text="Name"
                     android:textSize="20sp"
+                    android:textColor="@color/black"
                     android:textStyle="bold"
                     android:paddingTop="8dp"/>
 
@@ -54,7 +55,7 @@
                     android:text="Price"
                     android:textSize="18sp"
                     android:paddingTop="4dp"
-                    android:textColor="@color/grey"
+                    android:textColor="@color/fortexts"
                     android:paddingBottom="10dp"/>
 
                 <!-- To display modifications header -->
@@ -66,8 +67,8 @@
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:paddingTop="4dp"
-                    android:textColor="@color/grey"
-                    android:paddingBottom="10dp"/>
+                    android:textColor="@color/fortexts"
+                    />
 
                 <!-- To display modifications -->
                 <TextView
@@ -76,8 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="None"
                     android:textSize="18sp"
-                    android:paddingTop="4dp"
-                    android:textColor="@color/grey"
+                    android:textColor="@color/fortexts"
                     android:paddingBottom="10dp"/>
 
                 <!-- To display special request header -->
@@ -89,8 +89,8 @@
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:paddingTop="4dp"
-                    android:textColor="@color/grey"
-                    android:paddingBottom="10dp"/>
+                    android:textColor="@color/fortexts"
+                    />
 
                 <!-- To display special requests -->
                 <TextView
@@ -99,8 +99,7 @@
                     android:layout_height="wrap_content"
                     android:text="None"
                     android:textSize="18sp"
-                    android:textColor="@color/grey"
-                    android:paddingTop="4dp"
+                    android:textColor="@color/fortexts"
                     android:paddingBottom="10dp"/>
 
             </LinearLayout>
