--- a/app/src/main/res/layout/customlayoutfororders.xml
+++ b/app/src/main/res/layout/customlayoutfororders.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Order number"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:paddingBottom="8dp"/>
 
@@ -28,6 +29,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
+
+        <RelativeLayout
+            android:id="@+id/receivedbtn"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="0dp"
+            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/checkoutbtn"
+            android:elevation="1dp"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order received"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
