--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -20,13 +20,16 @@
             android:background="@color/white">
 
             <!-- Toolbar with menu button and Cart -->
+
+            <!-- Top Section with Tagline and Search Bar -->
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
                 android:background="@color/orange"
+                android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -93,7 +96,6 @@
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
 
-            <!-- Top Section with Tagline and Search Bar -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/top_section"
                 android:layout_width="match_parent"
