--- a/app/src/main/res/layout/customhistorycard.xml
+++ b/app/src/main/res/layout/customhistorycard.xml
@@ -28,7 +28,8 @@
             android:padding="16dp"
             app:layout_constraintTop_toBottomOf="@id/timedatedisplay"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/ordernumber"
@@ -45,6 +46,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/tvTotalPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total Price: $0.00"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:paddingTop="8dp"
+                android:paddingBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/tvGST"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GST: $0.00"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:paddingBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/tvTotalWithGST"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total with GST: $0.00"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:paddingBottom="4dp"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
